--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,8 @@ jobs:
   build:
     strategy:
       matrix:
-        # os: [ ubuntu-latest ]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ ubuntu-latest ]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout
