--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 name: zerotier
-on: [ push ]
+on: [push]
 
 jobs:
   build:
     strategy:
       matrix:
         # os: [ ubuntu-latest ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout
@@ -33,15 +33,19 @@ jobs:
     strategy:
       matrix:
         # os: [ ubuntu-latest ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     if: ${{ github.ref_name }} == "main"
     steps:
       - name: zerotier
-        uses: zerotier/github-action@main
+        uses: RichieCahill/zerotier-github-action@main
         with:
           network_id: ${{ secrets.ZEROTIER_NETWORK_ID }}
           auth_token: ${{ secrets.ZEROTIER_CENTRAL_TOKEN }}
+
+      - name: ping host
+        shell: bash
+        run: ls -la
 
       - name: ping host
         shell: bash
