--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ runs:
   using: "composite"
   steps:
     - name: zerotier
-      uses: zerotier/github-action/util/post@main
+      uses: RichieCahill/zerotier-github-action/util/post@test
       env:
         ACTION_PATH: ${{ github.action_path }}
         API_URL: ${{ inputs.api_url }}
